update deps, 2019 day 17 part 1