@@ -4,8 +4,9 @@
 //> using dep org.apache.commons:commons-math4-core:4.0-beta1
 //> using dep org.apache.commons:commons-numbers-primes:1.2
 //> using dep com.google.guava:guava:33.1.0-jre
-//> using dep commons-codec:commons-codec:1.17.2
-//> using dep org.scala-graph:graph-core_2.13:2.0.2
+//> using dep commons-codec:commons-codec:1.18.0
+//> using dep org.scala-graph:graph-core_2.13:2.0.3
 //> using dep org.scala-lang.modules::scala-parallel-collections:1.2.0
 //> using dep org.scala-lang.modules::scala-collection-contrib:0.4.0
 //> using options -experimental -language:experimental.namedTuples
+//> using javaOpt --sun-misc-unsafe-memory-access=allow
